tests/errors/conflicting-use.expect
---CODE---
1
---STDERR---
error: Cannot prove constraint |G - G+1| >= |G - G+2|
    ┌─ tests/errors/conflicting-use.fil:8:3
    │
  7 │   m0 := M<G>(10, 20);
    │   ------------------- Invoke provides binding M.G=G
  8 │   m1 := M<G+1>(30, 40);
    │   ^^^^^^^^^^^^^^^^^^^^^ Conflicting invoke. Invoke provides binding M.G=G+1
    │
    ┌─ ./primitives/core.fil:137:3
    │
137 │   @interface[G, G+2] go_G: 1,
    │   -------------------------- @interface for G specifies that invokes must be |G - G+2| cycles apart

